# binchotan-backend

./: .env.template  Cargo.toml  LICENSE  README.ja.md  README.md  config.toml
docs/: protocol.md
example_filters/echo/: binchotan.toml
example_filters/mute_source/: binchotan.toml  main.lua
example_filters/mute_word/: binchotan.toml  main.lua
migrations/2022-10-27-154135_create_accounts/: down.sql  up.sql
migrations/sqlite/2022-12-10-054805_create_accounts/: down.sql  up.sql
resources/: binchotan.service
src/: api.rs  auth.rs  cache.rs  config.rs  connection.rs  credential.rs  error.rs  filter.rs  main.rs  methods.rs  models.rs  tweet.rs
