[package]
name = "binchotan-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "~0.15"
oauth2 = "~4.2.3"
thiserror = "~1.0.32"
anyhow = "~1.0.60"
url = "~2"
reqwest = { version = "~0.11.11", default-features = false, features = ["rustls-tls"] }
serde_json = "~1.0"
serde = "~1"
tokio = { version = "1", features = ["full"] }
